Added favicon and fixed path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <!-- AOS (Animate On Scroll) Library -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<link rel="icon" type="icon" href="assets/images/robot.png">
+<link rel="icon" type="image/png" href="assets/images/robot.png">
 
 </head>
 <body >
