--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <!-- AOS (Animate On Scroll) Library -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<link rel="icon" type="image/png" sizes="32x32" href="assets/images/Robot.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="assets/images/Robot.ico">
-<link rel="shortcut icon" href="assets/images/robot.ico">
-
+<!-- Favicon -->
+<link rel="icon" type="image/x-icon" href="assets/images/Robot.ico">
+<link rel="shortcut icon" href="assets/images/Robot.ico">
 
 </head>
 <body >
