video thumnails added

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
   <div class="projects-grid">
     
     <div class="project-card">
-      <video controls>
+      <video controls poster="assets/Thumbnail/Screenshot 2025-08-30 125643.png">
         <source src="assets/videos/project1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -286,7 +286,7 @@
     </div>
 
     <div class="project-card">
-      <video controls>
+      <video controls poster="assets/Thumbnail/Screenshot 2025-08-30 125735.png">
         <source src="assets/videos/project3.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -294,7 +294,7 @@
       <p>A system that reads real flight data from CSV and generates a spline path with slider-based aircraft playback.</p>
     </div>
         <div class="project-card">
-      <video controls>
+      <video controls poster="assets/Thumbnail/Screenshot 2025-08-30 125759.png">
         <source src="assets/videos/project4.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -302,7 +302,7 @@
       <p>A custom Unreal Engine app featuring real-time model updates, runtime gizmo controls, and seamless C++ + Blueprint integration.</p>
     </div>
         <div class="project-card">
-      <video controls>
+      <video controls poster="assets/Thumbnail/project5 - frame at 0m3s.jpg">
         <source src="assets/videos/project5.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -310,7 +310,7 @@
       <p>Enhanced with Undo/Redo, copy, delete, and save features, Model Pro Phase 2 brings more control and precision to real-time editing.</p>
     </div>
         <div class="project-card">
-      <video controls>
+      <video controls poster="assets/Thumbnail/project6 - frame at 0m37s.jpg">
         <source src="assets/videos/project6.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
