Added new resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body >
 
 <!-- HTML -->
-<a href="assets/Akhilesh Resume V1.pdf" target="_blank" class="resume-btn" title="Download my Resume">
+<a href="assets/Akhilesh B S.pdf" target="_blank" class="resume-btn" title="Download my Resume">
     🖨️
 </a>
 
